--- a/html/homepage.html
+++ b/html/homepage.html
@@ -18,7 +18,7 @@
             <input class="search" type="text" placeholder="Search..">
         </div>
         <ul>
-            <li class="ROUGE"> <a href="#"></a> </li>
+            <li class="ROUGE"> <a href="http://127.0.0.1:5500/html/homepage.html"></a> </li>
             <li class="YELLOW"><a href="#"></a></li>
             <li class="BLUE"><a href="#"></a></li>
             <li class="VERT"><a href="#"></a></li>
@@ -31,33 +31,57 @@
 
     <div class="container">
         <div class="category1">
-            <img src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663" alt="">
-            <p>Lorem </p>
+            <a href="#"> <img
+                    src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663"
+                    alt="">
+                <p>Lorem </p>
+            </a>
+
         </div>
 
         <div class="category2">
-            <img src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663" alt="">
-            <p>Lorem </p>
+            <a href="#"> <img
+                    src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663"
+                    alt="">
+                <p>Lorem </p>
+            </a>
+
         </div>
 
         <div class="category3">
-            <img src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663" alt="">
-            <p>Lorem </p>
+            <a href="#"> <img
+                    src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663"
+                    alt="">
+                <p>Lorem </p>
+            </a>
+
         </div>
 
         <div class="category4">
-            <img src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663" alt="">
-            <p>Lorem </p>
+            <a href="#"> <img
+                    src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663"
+                    alt="">
+                <p>Lorem </p>
+            </a>
+
         </div>
 
         <div class="category5">
-            <img src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663" alt="">
-            <p>Lorem </p>
+            <a href="#"><img
+                    src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663"
+                    alt="">
+                <p>Lorem </p>
+            </a>
+
         </div>
 
         <div class="category6">
-            <img src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663" alt="">
-            <p>Lorem </p>
+            <a href="#"> <img
+                    src="https://librairieforumdulivre.files.wordpress.com/2017/10/geluck-e1507718621909.jpg?w=663"
+                    alt="">
+                <p>Lorem </p>
+            </a>
+
         </div>
 
     </div>
